
0.9.9g Jan 13, 2005
 * deps of pkg that conflict are now set to remove just like when conflicts of
   requested pkg to install are detected
 * fixed bug where conflict of a dep might slip through and allow the requested
   package to successfully be installed
 * fixed segfault when cleaning up if EXCLUDE is not defined within slapt-getrc
 * removed bad use of strcspn() breaking using ROOT env var with slapt-get

0.9.9f Jan 12, 2005
 * all malloc and calloc calls are now wrapped in slapt_malloc and slapt_calloc
 * added a few missing free() calls, and a missing closedir() call in
   working_dir_init()
 * exclude now searches on package location, so you can exclude disk
   sets as well
 * rewrote "Why yet another package management tool for Slackware?" and
   "What about package dependencies?" in FAQ
 * added a 'Getting started' section to the README
 * misc code updates
 * if resume of pkg download is not supported by remote server or proxy,
   remove partial file and try again
 * ensured --remove-obsolete ignores excluded packages
 * updated translations
 * added --remove-obsolete option for dist-upgrade (see FAQ #9 and #28)
 * fixed bug in gen_short_pkg_description with installed packages that are
   missing a description, triggered by the new --search functionality looking
   at installed packages
 * added Vietnamese translation by vu nguyen (vncasper at yahoo dot com)
 * changed longopts and switch cases to use macros for the command line
   argument parsing
 * fixed bug (in -current with glibc 3.3.3) by adding a missing {0, 0, 0, 0}
   where unknown option to getopt_long_only caused segfaults
 * added cast to fix strpbrk() void pointer arith warning with gcc-3.4
 * updated FAQ
 * added alsa.* to default exclude
 * produce warning if slack-require information is too long
 * updated setlocale() call to set category to LC_ALL, thanks Piotr Simon
 * updated documentation

0.9.9e Dec 07, 2004